[build-system]
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "mods4pandas"
version = "0.0.0"
authors = [
    {name = "Mike Gerber", email = "mike.gerber@sbb.spk-berlin.de"},
    {name = "The QURATOR SPK Team", email = "qurator@sbb.spk-berlin.de"},
]
description = "Convert MODS metadata to a pandas DataFrame"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.9"
keywords = ["qurator", "mets", "mods", "metadata", "library"]

dynamic = ["dependencies", "optional-dependencies"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
mods4pandas="mods4pandas.mods4pandas:main"
alto4pandas="mods4pandas.alto4pandas:main"


[project.urls]
Homepage = "https://github.com/qurator-spk/mods4pandas"
Repository = "https://github.com/qurator-spk/mods4pandas.git"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]


[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache software license",
    "apache software",
    "apache license 2.0",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "GNU Library or Lesser General Public License (LGPL)",
    "GNU Lesser General Public License v3 (LGPLv3)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "mit",
    "mit license",
    "mit-cmu",
    "python software foundation",
    "psf",
    "psf-2.0",
    "Historical Permission Notice and Disclaimer (HPND)",
    "public domain",
    'The Unlicense (Unlicense)',
    "isc",
    "ISC License (ISCL)",
    'Mozilla Public License 2.0 (MPL 2.0)',
]
unauthorized_licenses = [
    "gpl v3",
]
